# ft_transcendence

./: .gitignore  Makefile  README.md  docker-compose.yml  generate_env.sh  init.sh  init_venv.sh
.devcontainer/: devcontainer.json
backend/: requirements.txt
backend/ft_transcendence/: settings.py
srcs/: .dockerignore  .pylintrc  docker-compose.yml  requirements.txt
srcs/django/: .dockerignore  .pylintrc  dockerfile  entrypoint.sh  manage.py  pyproject.toml
srcs/django/api/: urls.py  utils.py
srcs/django/ft_transcendence/: asgi.py  settings.py  tests.py  urls.py  views.py  wsgi.py
srcs/django/ft_transcendence/templates/: index.html
srcs/django/oauth/: urls.py  views.py
srcs/django/result/: deploy.py  result.py  tests.py  views.py
srcs/django/result/contracts/: TournamentContract.sol
srcs/django/static/: index.html
srcs/django/static/css/: style.css
srcs/django/static/js/models/: API.js  Component.js  GameSocket.js  Notification.js
srcs/django/static/js/pages/: RootPage.js  SubPage.js
srcs/django/static/js/pages/auth/: AuthPage.js  LoginSubpage.js  SignupSubpage.js
srcs/django/static/js/pages/game/: PongSubpage.js  TournamentSubpage.js
srcs/django/static/js/pages/main/: MainSubpage.js
srcs/django/user/: backends.py  forms.py  middleware.py  models.py  tests.py  urls.py  utils.py  views.py
srcs/django/ws/: ai_player.py  apps.py  constants.py  consumers.py  enums.py  game.py  lobby.py  middleware.py  player.py  queue.py  roommanager.py  tests.py  tournament.py
srcs/hardhat/: .dockerignore  dockerfile  hardhat.config.js
srcs/nginx/: dockerfile  nginx.conf
srcs/nginx/http.d/: ft_transcendence.conf
srcs/requirements/blockchain/: .env  Tournament.sol  TournamentManager.sol  TournamentResult.py  compiled_code.json  deploy.py  deploy2.py
srcs/requirements/django/: Dockerfile  dockerfile  entrypoint.sh  init_venv.sh  manage.py  requirements.dev.txt  requirements.txt
srcs/requirements/frontend/: game.html  index.html  login.html  main.html  pong.js  style.css  tournament_room.html
(+168 files in other folders)
