[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel"]

[project]
dependencies = [
  "django==5.0.6",
  "channels[daphne]==4.1.0",
  "channels-redis==4.2.0",
  "django-cors-headers==4.4.0",
  "PyJWT==2.8.0",
  "psycopg[binary]==3.1.19",
  "tzdata==2024.1",
  "py-solc-x==2.0.3",
  "web3==6.20.0",
]

name = "ft-transcendence"
requires-python = ">= 3.11"
version = "0.0.1"

[tools.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["./"]

[tool.pylint]
load-plugins = ["pylint_django"]

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "no-member",
    "no-self-use"
]

[tool.pylint.'DESIGN']
max-attributes = 10

[tool.pylint.'FORMAT']
max-line-length = 100

[tool.pylint.'TYPECHECK']
ignored-modules = [
    "django",
    "django.db.models",
    "django.core",
    "django.conf",
    "django.http",
    "django.shortcuts",
    "django.urls",
    "django.utils",
    "django.contrib"
]

[tool.pylint.'VARIABLES']
additional-builtins = ["_"]

[project.optional-dependencies]
dev = [
  "python-dotenv",
  "pylint",
  "pylint-django",
  "pylint-plugin-utils",
  "factory-boy",
  "Faker",
]
